# chatcmd

./: .gitignore  ENHANCED_FEATURES.md  LICENSE  MULTI_MODEL_GUIDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
chatcmd/: __init__.py  __main__.py  api.py  chatcmd.py  chatcmd_init.py  cli.py  commands.py  constants.py  helpers.py  lookup.py
chatcmd/api/: __init__.py  enhanced_api.py
chatcmd/commands/: __init__.py
chatcmd/config/: __init__.py  model_config.py  provider_factory.py
chatcmd/core/: __init__.py  display.py
chatcmd/database/: __init__.py  schema_manager.py
chatcmd/features/: __init__.py  developer_tools.py
chatcmd/helpers/: __init__.py  platform_utils.py  secure_storage.py
chatcmd/lookup/: __init__.py  enhanced_lookup.py
chatcmd/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  google_provider.py  ollama_provider.py  openai_provider.py
chatcmd/tools/: __init__.py  encoding.py  generators.py  lookup.py  network.py
