[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
    "pyperclip >= 1.8.2",
    "requests >= 2.31.0",
    "fake_useragent >= 1.3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "chatcmd"
version = "1.1.13"
description = "ChatCMD is an open source AI-driven CLI-based command lookup using ChatGPT to lookup relevant CLI commands based on user input."
authors = [
    { name = "Naif Alshaye", email = "naif@naif.io" }
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: System Administrators',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    "Natural Language :: English",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation",
]
keywords = [
    "cli", "command", "command-line", "commandline", "terminal", "development","linux", "ai", "artificial-intelligence", "chatgpt", "chatcmd", "lookup","open source","MIT"
]
dependencies = [
    "docopt >=0.6.2",
    "openai >=0.6.4",
    "pyperclip >=1.8.2",
    "requests >= 2.31.0",
    "fake_useragent >= 1.3.0"
]

[project.urls]
"Homepage" = "https://github.com/naifalshaye/chatcmd"
"Documentation" = "https://github.com/naifalshaye/chatcmd/blob/master/README.md"
"Repository" = "https://github.com/naifalshaye/chatcmd.git"
"Bug Tracker" = "https://github.com/naifalshaye/chatcmd/issues"

[project.scripts]
chatcmd = "chatcmd.chatcmd_init:main"